// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must be able to randomize keys for ContentBlockNodes BlockMap and make orphan blocks become root blocks 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": "key1",
    "parent": null,
    "prevSibling": null,
    "text": "Delta",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [],
    "children": Array [
      "key2",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "nextSibling": "key3",
    "parent": null,
    "prevSibling": "key0",
    "text": "",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "nextSibling": null,
    "parent": "key1",
    "prevSibling": null,
    "text": "Fire",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key3",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "key1",
    "text": "Gorilla",
    "type": "unstyled",
  },
]
`;

exports[`must be able to randomize keys for ContentBlockNodes BlockMap and update reference links to the new keys 1`] = `
Array [
  Object {
    "characterList": Array [],
    "children": Array [
      "key1",
      "key3",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [],
    "children": Array [
      "key2",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "nextSibling": "key3",
    "parent": "key0",
    "prevSibling": null,
    "text": "",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "nextSibling": null,
    "parent": "key1",
    "prevSibling": null,
    "text": "X",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key3",
    "nextSibling": null,
    "parent": "key0",
    "prevSibling": "key1",
    "text": "Y",
    "type": "unstyled",
  },
]
`;

exports[`must be able to randomize keys for ContentBlocks BlockMap 1`] = `
Array [
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "Alpha",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "text": "Beta",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "Charlie",
    "type": "unstyled",
  },
  Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key3",
    "text": "Delta",
    "type": "unstyled",
  },
]
`;
